mise à propre avec titre chapitres etc manque que l'ACP plus détaillé

--- a/Groupe 2/Groupe 2/rendu.ipynb
+++ b/Groupe 2/Groupe 2/rendu.ipynb
@@ -3592,7 +3592,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-----------"
+    "### -----------"
    ]
   },
   {
@@ -4470,6 +4470,22 @@
     "\n",
     "#affichage\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://fxjollois.github.io/cours-2019-2020/lp-iot--python-ds/seance2-ACP-classif.html\n",
+    "\n",
+    "https://sites.google.com/view/aide-python/statistiques/machine-learning-en-python/analyses-en-composantes-principales"
    ]
   }
  ],
