--- a/Groupe 2/Groupe 2/rendu.ipynb
+++ b/Groupe 2/Groupe 2/rendu.ipynb
@@ -1471,16 +1471,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1ca85ee8b20>"
+       "<matplotlib.image.AxesImage at 0x1ca8258a310>"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1498,8 +1498,8 @@
     }
    ],
    "source": [
-    "cf = pd.DataFrame(coord,index=df_acp_dep.index,columns=np.arange(1,p+1)).T\n",
-    "plt.matshow(cf.corr())"
+    "cf = pd.DataFrame(coord,index=df_acp_dep.index,columns=np.arange(1,p+1)).T.corr()\n",
+    "plt.matshow(cf)"
    ]
   },
   {
