--- a/Groupe 2/Groupe 2/rendu.ipynb
+++ b/Groupe 2/Groupe 2/rendu.ipynb
@@ -3718,6 +3718,339 @@
     "\n",
     "https://sites.google.com/view/aide-python/statistiques/machine-learning-en-python/analyses-en-composantes-principales"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Essayons maintenant de faire une ACP par département et par groupe politique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cre_tab_dep(tab,nom) : \n",
+    "\n",
+    "    res = tab.groupby([\"Libellé du département\"]).sum().reset_index().sum(axis=1)\n",
+    "    super = pd.DataFrame(data = res, columns=[nom])\n",
+    "    a = pd.DataFrame(data[[\"Libellé du département\"]]).groupby([\"Libellé du département\"]).sum().reset_index()\n",
+    "    fusion = a.join(super, how='outer')\n",
+    "    return fusion\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\belkh\\AppData\\Local\\Temp\\ipykernel_4268\\3663551402.py:3: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  res = tab.groupby([\"Libellé du département\"]).sum().reset_index().sum(axis=1)\n",
+      "C:\\Users\\belkh\\AppData\\Local\\Temp\\ipykernel_4268\\3663551402.py:3: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  res = tab.groupby([\"Libellé du département\"]).sum().reset_index().sum(axis=1)\n",
+      "C:\\Users\\belkh\\AppData\\Local\\Temp\\ipykernel_4268\\3663551402.py:3: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  res = tab.groupby([\"Libellé du département\"]).sum().reset_index().sum(axis=1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Voix Gauche</th>\n",
+       "      <th>Voix Centre Droite</th>\n",
+       "      <th>Voix Extrême droite</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Libellé du département</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Ain</th>\n",
+       "      <td>88974</td>\n",
+       "      <td>129437</td>\n",
+       "      <td>114093</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Aisne</th>\n",
+       "      <td>61353</td>\n",
+       "      <td>81899</td>\n",
+       "      <td>122608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Allier</th>\n",
+       "      <td>51256</td>\n",
+       "      <td>72023</td>\n",
+       "      <td>62676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alpes-Maritimes</th>\n",
+       "      <td>134607</td>\n",
+       "      <td>197041</td>\n",
+       "      <td>227127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alpes-de-Haute-Provence</th>\n",
+       "      <td>31300</td>\n",
+       "      <td>31447</td>\n",
+       "      <td>33936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vienne</th>\n",
+       "      <td>74873</td>\n",
+       "      <td>90626</td>\n",
+       "      <td>66153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vosges</th>\n",
+       "      <td>50733</td>\n",
+       "      <td>74131</td>\n",
+       "      <td>78830</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wallis et Futuna</th>\n",
+       "      <td>871</td>\n",
+       "      <td>3791</td>\n",
+       "      <td>697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yonne</th>\n",
+       "      <td>46517</td>\n",
+       "      <td>61889</td>\n",
+       "      <td>68105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yvelines</th>\n",
+       "      <td>236559</td>\n",
+       "      <td>334142</td>\n",
+       "      <td>165805</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>107 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Voix Gauche  Voix Centre Droite  Voix Extrême droite\n",
+       "Libellé du département                                                       \n",
+       "Ain                            88974              129437               114093\n",
+       "Aisne                          61353               81899               122608\n",
+       "Allier                         51256               72023                62676\n",
+       "Alpes-Maritimes               134607              197041               227127\n",
+       "Alpes-de-Haute-Provence        31300               31447                33936\n",
+       "...                              ...                 ...                  ...\n",
+       "Vienne                         74873               90626                66153\n",
+       "Vosges                         50733               74131                78830\n",
+       "Wallis et Futuna                 871                3791                  697\n",
+       "Yonne                          46517               61889                68105\n",
+       "Yvelines                      236559              334142               165805\n",
+       "\n",
+       "[107 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_G = data[['Libellé du département', 'Voix.MJL', 'Voix.AN', 'Voix.PP', 'Voix.JY', 'Voix.RF', 'Voix.HA']]\n",
+    "df_CD = data[['Libellé du département', 'Voix.ME', 'Voix.LJ', 'Voix.PV', 'Voix.DAN']]\n",
+    "df_ED = data[['Libellé du département', 'Voix.ZE', 'Voix.LPM']]\n",
+    "\n",
+    "df_G = cre_tab_dep(df_G,\"Voix Gauche\")\n",
+    "df_CD = cre_tab_dep(df_CD,\"Voix Centre Droite\")\n",
+    "df_ED = cre_tab_dep(df_ED,\"Voix Extrême droite\")\n",
+    "\n",
+    "one = pd.merge(df_G, df_CD)\n",
+    "fusion = pd.merge(one,df_ED)\n",
+    "\n",
+    "fusion.set_index('Libellé du département', inplace = True)\n",
+    "fusion\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.174577</td>\n",
+       "      <td>0.053699</td>\n",
+       "      <td>0.192966</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.477201</td>\n",
+       "      <td>-0.432880</td>\n",
+       "      <td>0.303603</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.587826</td>\n",
+       "      <td>-0.533966</td>\n",
+       "      <td>-0.475106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.325390</td>\n",
+       "      <td>0.745664</td>\n",
+       "      <td>1.661639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.806470</td>\n",
+       "      <td>-0.949285</td>\n",
+       "      <td>-0.848530</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>-0.329072</td>\n",
+       "      <td>-0.343554</td>\n",
+       "      <td>-0.429928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>-0.593556</td>\n",
+       "      <td>-0.512390</td>\n",
+       "      <td>-0.265213</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>-1.139858</td>\n",
+       "      <td>-1.232360</td>\n",
+       "      <td>-1.280411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>-0.639748</td>\n",
+       "      <td>-0.637693</td>\n",
+       "      <td>-0.404565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>1.442404</td>\n",
+       "      <td>2.148971</td>\n",
+       "      <td>0.864870</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>107 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            0         1         2\n",
+       "0   -0.174577  0.053699  0.192966\n",
+       "1   -0.477201 -0.432880  0.303603\n",
+       "2   -0.587826 -0.533966 -0.475106\n",
+       "3    0.325390  0.745664  1.661639\n",
+       "4   -0.806470 -0.949285 -0.848530\n",
+       "..        ...       ...       ...\n",
+       "102 -0.329072 -0.343554 -0.429928\n",
+       "103 -0.593556 -0.512390 -0.265213\n",
+       "104 -1.139858 -1.232360 -1.280411\n",
+       "105 -0.639748 -0.637693 -0.404565\n",
+       "106  1.442404  2.148971  0.864870\n",
+       "\n",
+       "[107 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sc = StandardScaler()\n",
+    "\n",
+    "Z = sc.fit_transform(fusion)\n",
+    "Z = pd.DataFrame(Z)\n",
+    "Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PCA(svd_solver='full')\n"
+     ]
+    }
+   ],
+   "source": [
+    "acp = PCA(svd_solver='full')\n",
+    "print(acp)"
+   ]
   }
  ],
  "metadata": {
